Module 2 - Reveal Gallery
nisam zadovoljna na mobile kako izgleda, wtf

--- a/css/app.css
+++ b/css/app.css
@@ -312,6 +312,7 @@ header h1 span {
 	color: var(--text-color);
 	position: relative;
 	z-index: 1;
+	flex-direction: column;
 }
 .rg__column {
 	flex-grow: 1; /* equivalent to 33.33% */
@@ -321,6 +322,7 @@ header h1 span {
 	justify-content: center;
 	position: relative;
 	overflow: hidden;
+	min-height: 50vh;
 }
 .rg__text--heading h3 {
 	font-size: 3.6vw;
@@ -337,9 +339,19 @@ header h1 span {
 	font-weight: normal;
 }
 .rg__text {
-	max-width: 17vw;
+	/* max-width: 17vw; */
 	z-index: 1;
 	position: relative;
+}
+.rg__text--mask {
+	overflow: hidden;
+}
+.rg__text--copy {
+	position: absolute;
+	overflow: hidden;
+}
+.rg__text--copy p {
+	margin: 0;
 }
 .rg__text--copy,
 .stage__text p {
@@ -365,29 +377,37 @@ header h1 span {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #000000;
+	pointer-events: none;
+
 	/* transform: translateY(-100%);
-  transition: transform 0.45s var(--easing); */
+	transition: transform 0.45s var(--easing); */
 }
 .rg__image--mask {
 	height: 100%;
 	overflow: hidden;
+
 	/* transition: transform 0.45s var(--easing);
-  transform: translateY(100%); */
+	transform: translateY(100%); */
 }
 .rg__image img {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	object-fit: cover;
+	object-position: 50% 50%;
+	/* opacity: 0.8; */
 	opacity: 0.6;
 }
-.rg__column.is-active .rg__image,
+/* .rg__column.is-active .rg__image,
 .rg__column.is-active .rg__image--mask {
-	/* transform: translateY(0); */
-}
-.rg__text--copy {
-	position: absolute;
-	overflow: hidden;
-}
-.rg__text--mask {
-	overflow: hidden;
-}
+	transform: translateY(0);
+} */
 
 /* =Loader */
 .loader,
@@ -696,6 +716,21 @@ section {
 }
 
 @media only screen and (min-width: 768px) {
+	/* =Reveal Gallery */
+	.reveal-gallery {
+		flex-direction: row;
+		height: 100vh;
+	}
+	.rg__column {
+		min-height: auto;
+	}
+	.rg__text--copy {
+		position: absolute;
+		overflow: hidden;
+	}
+	.rg__text {
+		max-width: 17vw;
+	}
 }
 
 @media only screen and (min-width: 1140px) {
